--- a/students/motkaliuk_andrii/11_flexbox_bootstrap/index.html
+++ b/students/motkaliuk_andrii/11_flexbox_bootstrap/index.html
@@ -29,13 +29,12 @@
                     <li class="menu_item"><a href="#">Resources</a></li>
                 </ul>
             </nav>
-            <div class="sign_in_up">
-                <div class="sign_in">
-                    <!-- tag a -->
-                    <button class="sign_in_button">Sign In</button>
+            <div class="sign-in-up">
+                <div class="sign-in">
+                    <a class="sign-in_button" href="#">Sign In</a>
                 </div>
-                <div class="sign_up">
-                    <button class="sign_up_button">Sign Up</button>
+                <div class="sign-up">
+                    <a class="sign-up_button" href="#">Sign Up</a>
                 </div>
             </div>
         </div>
@@ -47,11 +46,10 @@
                 <div class="design_item1">
                     <h1 class="design_header">The Design Thinking superpowers</h1>
                     <p class="design_item_content">Tools, tutorials, design and innovation experts, all in one place!
-                        The most intuitive way to imagine your next user
-                        experience.</p>
+                        The most intuitive way to imagine your next user experience.</p>
 
                     <div class="button_container">
-                        <button class="get_started_button">Get started</button>
+                        <a class="get_started_button" href="#">Get started</a>
                     </div>
                 </div>
                 <div class="design_item2">
@@ -62,62 +60,61 @@
 
         <section class="we-design">
             <div class="container">
-                <h2 class="we_design_header">We design tools to unveil<br> your superpowers</h2>
-                <div class="we_design_container">
-                    <div class="we_disign_item">
+                <h2 class="we-design_header">We design tools to unveil<br> your superpowers</h2>
+                <div class="we-design_list">
+                    <div class="we-design_item">
                         <img src="images/cursor.svg" alt="click picture">
-                        <h3 class="we_design_item_header">First click tests</h3>
-                        <p class="we_design_content">While most people enjoy casino gambling.</p>
+                        <h3 class="we-design_item_header">First click tests</h3>
+                        <p class="we-design_content">While most people enjoy casino gambling.</p>
                     </div>
-                    <div class="we_disign_item">
+                    <div class="we-design_item">
                         <img src="images/path.svg" alt="click picture">
-                        <h3 class="we_design_item_header">Design surveys</h3>
-                        <p class="we_design_content">Sports betting, lottery and bingo<br> playing for the fun.</p>
+                        <h3 class="we-design_item_header">Design surveys</h3>
+                        <p class="we-design_content">Sports betting, lottery and bingo<br> playing for the fun.</p>
                     </div>
-                    <div class="we_disign_item">
+                    <div class="we-design_item">
                         <img src="images/like.svg" alt="click picture">
-                        <h3 class="we_design_item_header">Preference tests</h3>
-                        <p class="we_design_content">The Myspace page defines the<br> individual.</p>
+                        <h3 class="we-design_item_header">Preference tests</h3>
+                        <p class="we-design_content">The Myspace page defines the<br> individual.</p>
                     </div>
-                    <div class="we_disign_item">
+                    <div class="we-design_item">
                         <img src="images/time.svg" alt="click picture">
-                        <h3 class="we_design_item_header">Five second tests</h3>
-                        <p class="we_design_content">Personal choices and the overall<br> personality of the person.</p>
+                        <h3 class="we-design_item_header">Five second tests</h3>
+                        <p class="we-design_content">Personal choices and the overall<br> personality of the person.</p>
                     </div>
                     <div class="we_disign_button_container">
-                        <button class="get_started_button">Sign up Now</button>
+                        <a class="we_disign_button" href="#">Sign up Now</a>
                     </div>
                 </div>
             </div>
         </section>
     </main>
 
-
     <footer>
         <div class="container">
             <div class="footer">
-                <div class="footer_icon">
+                <div class="footer_logo">
                     <img src="./images/logo.svg" alt="logo">
                 </div>
-                <div class="quick_links_block">
+                <div class="quick-links_block">
                     <h3 class="footer_headers">Quick Links</h3>
-                    <div class="quick_links">
+                    <div class="quick-links">
                         <ul>
-                            <li><a class="quick_links_item" href="#">About Us</a></li>
-                            <li><a class="quick_links_item" href="#">Blog</a></li>
-                            <li><a class="quick_links_item" href="#">Contacts</a></li>
-                            <li><a class="quick_links_item" href="#">FAQ</a></li>
+                            <li><a class="quick-links_item" href="#">About Us</a></li>
+                            <li><a class="quick-links_item" href="#">Blog</a></li>
+                            <li><a class="quick-links_item" href="#">Contacts</a></li>
+                            <li><a class="quick-links_item" href="#">FAQ</a></li>
                         </ul>
                     </div>
                 </div>
-                <div class="legal_stuff_block">
+                <div class="legal-stuff_block">
                     <h3 class="footer_headers">Legal Stuff</h3>
-                    <div class="legal_stuff">
+                    <div class="legal-stuff">
                         <ul>
-                            <li><a class="legal_stuff_item" href="#">Disclaimer</a></li>
-                            <li><a class="legal_stuff_item" href="#">Financing</a></li>
-                            <li><a class="legal_stuff_item" href="#">Privacy Policy</a></li>
-                            <li><a class="legal_stuff_item" href="#">Terms of Service</a></li>
+                            <li><a class="legal-stuff_item" href="#">Disclaimer</a></li>
+                            <li><a class="legal-stuff_item" href="#">Financing</a></li>
+                            <li><a class="legal-stuff_item" href="#">Privacy Policy</a></li>
+                            <li><a class="legal-stuff_item" href="#">Terms of Service</a></li>
                         </ul>
                     </div>
                 </div>
@@ -127,7 +124,7 @@
                         <input class="input_space" type="text" name="text_place" placeholder="Enter your phone Number">
                     </div>
                     <div class="footer_button_box">
-                        <button class="footer_button">Sign up Now</button>
+                        <a class="footer_button" href="#">Sign up Now</a>
                     </div>
                 </div>
             </div>
