--- a/students/motkaliuk_andrii/12_position_transform/index.html
+++ b/students/motkaliuk_andrii/12_position_transform/index.html
@@ -12,6 +12,7 @@
         href="https://fonts.googleapis.com/css2?family=Farro:wght@300&family=Francois+One&family=PT+Sans:wght@400;700&family=Staatliches&family=Tourney:wght@600&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -25,7 +26,8 @@
 
     <main>
         <div class="container">
-            <section class="sidebar_conteiner">
+            <!-- <img class="background-image" src="images/bg-picture.svg" alt="gear"> -->
+            <section class="sidebar">
                 <ul>
                     <li class="side-bar_item"><a href="#">Introduction</a></li>
                     <li class="side-bar_item"><a href="#">core components</a></li>
@@ -33,7 +35,7 @@
                     <li class="side-bar_item"><a href="#">handling text input</a></li>
                 </ul>
             </section>
-            <section class="main-content_container">
+            <section class="main-content">
                 <div class="content_item">
                     <h2 class="psevdo-line">Introduction<sup>Chapter 1</sup></h2>
                     <p>Welcome to the very start of your React Native journey! If you're looking for environment setup
@@ -48,9 +50,11 @@
                         and the app platform’s
                         native capabiles. With React Native, you use JavaScript to access your platform’s APIs as well
                         as to describe the
-                        appearance and behavior of your UI using React components: bundles of reusable, nestable code.
+                        appearance and behavior of your UI using React components: <em>bundles of reusable, nestable
+                            code</em>.
                         You can learn more about
                         React in the next section. But first, let’s cover how components work in React Native.</p>
+
                 </div>
                 <div class="content_item">
                     <h2 class="psevdo-line">react fundamentals<sup>Chapter 3</sup></h2>
@@ -61,36 +65,48 @@
                         course.</p>
                     <p>We’re going to cover the core concepts behind React:</p>
                     <ul>
-                        <li class="rf-list_item">components. The rest of this introduction to React uses cats in its
+                        <li class="rf-list_item"><strong>components.</strong> The rest of this introduction to React
+                            uses cats in
+                            its
                             examples: friendly, approachable creatures that
                             need names and a cafe to work in.</li>
-                        <li class="rf-list_item">JSX. React and React Native use JSX, a syntax that lets you write
-                            elements inside JavaScript like so: &lt;Text&gt;Hello, I am your cat!&lt;/Text&gt;.
+                        <li class="rf-list_item"><strong>JSX.</strong> React and React Native use JSX, a syntax that
+                            lets you
+                            write
+                            elements inside JavaScript like so: <br>
+                            <span class="selected-text">&lt;Text&gt;Hello, I am your cat!&lt;/Text&gt;.</span>
+
+                            <p>The React docs have <span class="underline-text">a comprehensive guide to JSX</span> you
+                                can refer to learn even more.
+                                Because
+                                JSX is JavaScript, you can
+                                use variables inside it. Here you are declaring a <span
+                                    class="selected-text">name</span> for the cat, name, and embedding
+                                it
+                                with curly braces inside<span class="selected-text">&lt;Text&gt;</span></p>
                         </li>
-                        <p>The React docs have a comprehensive guide to JSX you can refer to learn even more. Because
-                            JSX is JavaScript, you can
-                            use variables inside it. Here you are declaring a name for the cat, name, and embedding it
-                            with curly braces inside&lt;Text&gt;
-                        </p>
-                        <li class="rf-list_item">props. Props is short for “properties”.</li>
-                        <li class="rf-list_item">state. While you can think of props as arguments you use to configure
+                        <li class="rf-list_item"><strong>props.</strong> Props is short for “properties”.</li>
+                        <li class="rf-list_item"><strong>state.</strong> While you can think of props as arguments you
+                            use to
+                            configure
                             how components render, state is like a component’s
                             personal data storage. State is useful for handling data that changes over time or that
                             comes from user interaction.
                             State gives your components memory!</li>
                     </ul>
-                    <div class="content_item">
-                        <h2 class="psevdo-line">handling text input<sup>Chapter 4</sup></h2>
-                        <p>TextInput is a Core Component that allows the user to enter text. It has an onChangeText prop
-                            that takes a function to
-                            be called every time the text changed, and an onSubmitEditing prop that takes a function to
-                            be called when the text is
-                            submitted.</p>
-                        <p>For example, let's say that as the user types, you're translating their words into a
-                            different language. In this new
-                            language, every single word is written the same way: 🍕. So the sentence "Hello there Bob"
-                            would be translated as "🍕 🍕".</p>
-                    </div>
+                </div>
+                <div class="content_item">
+                    <h2 class="psevdo-line">handling text input<sup>Chapter 4</sup></h2>
+                    <p>TextInput is a Core Component that allows the user to enter text. It has an <em>onChangeText</em>
+                        prop
+                        that takes a function to
+                        be called every time the text changed, and an onSubmitEditing prop that takes a function to
+                        be called when the text is
+                        submitted.</p>
+                    <p>For example, let's say that as the user types, you're translating their words into a
+                        different language. In this new
+                        language, every single word is written the same way: 🍕. So the sentence "Hello there Bob"
+                        would be translated as "🍕 🍕".</p>
                 </div>
             </section>
         </div>
