--- a/students/dunaieva_alona/11_flexbox/index.html
+++ b/students/dunaieva_alona/11_flexbox/index.html
@@ -5,68 +5,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productly</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@400;700&family=Roboto&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Open+Sans:wght@400;700&family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Open+Sans:wght@400;700&family=Poppins:wght@700&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="page">
     <header class="header">
         <div class="container">
             <div class="row">
-                <div class="col-6">
-                    <div class="header__logo logo">
-                        <img class="logo__image" src="images/logo_img.svg" alt="logo__image">
-                        <img class="logo__title" src="images/logo_title.svg" alt="logo__title">
-                    </div>
-                </div>
                 <div class="col-4">
-                    <nav class="nav">
+                   <div class="logo">
+                    <img class="logo__image" src="images/logo.svg" alt="logo image">
+                </div>
+                 </div>
+                <div class="col-6">
+                    <nav class="menu-wrapper">
                         <ul class="menu">
                             <li class="menu__item">
-                                <a href="#">Product</a>
+                                <a class="menu__link" href="#">Product</a>
                             </li>
                             <li class="menu__item">
-                                <a href="#">Custumer</a>
+                                <a class="menu__link" href="#">Custumer</a>
                             </li>
                             <li class="menu__item">
-                                <a href="#">Pricing</a>
+                                <a class="menu__link" href="#">Pricing</a>
                             </li>
                             <li class="menu__item">
-                                <a href="#">Resourses</a>
+                                <a class="menu__link" href="#">Resourses</a>
                             </li>
                         </ul>
                     </nav>
                 </div>
-                <div class="col-6">
+                <div class="col-4">
                     <div class="action">
-                        <button class="btn btn-secondary">
-                            <span>Sing In</span>
-                        </button>
-                        <button class="btn btn-primary">
-                            <span>Sing Up</span>
-                        </button>
+                        <a class="action__link btn btn-secondary btn-small" href="#">Sign in</a>
+                        <a class="action__link btn  btn-primary btn-small" href="#">Sign up</a>
                     </div>
                 </div>
             </div>
         </div>
     </header>
     <main>
-        <section class="hero-block">
+        <section class="hero">
             <div class="container">
                 <div class="row">
                     <div class="col-6">
-                        <div class="hero">
-                            <h1>The Design Thinking superpowers</h1>
-                            <p class="hero__text">Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine your next user experience.</p>
-                            <button class="btn-primary btn">
-                            <span>Get started</span>
-                        </button>
-                        </div>
+                        <h1 class="hero__title">The Design Thinking superpowers</h1>
+                        <p class="hero__text">Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine your next user experience.</p>
+                        <a class="hero__link btn-primary btn" href="#">Get started</a>
                     </div>
                     <div class="col-6">
-                        <img class="hero__image" src="images/hero_img.jpg" alt="people">
+                        <img src="images/hero_img.jpg" alt="people">
                     </div>
                 </div>
             </div>
@@ -76,32 +65,29 @@
                 <h2 class="tools__title">We design tools to unveil your superpowers</h2>
                 <div class="row">
                     <div class="col-3">
-                        <img class="tools__image" src="images/purple.svg" alt="cursor">
-                        <h3>First click tests</h3>
-                        <p>While most people enjoy casino gambling.</p>
+                        <img class="tools__image" src="images/purple.svg" alt="icon">
+                        <h3 class="tools__subtitle">First click tests</h3>
+                        <p class="tools__text">While most people enjoy casino gambling</p>
                     </div>
                     <div class="col-3">
-                        <img class="tools__image" src="images/orange.svg" alt="design">
-                        <h3>Design surveys</h3>
-                        <p>Sports betting, lottery and bingo playing for the fun.</p>
+                        <img class="tools__image" src="images/orange.svg" alt="icon">
+                        <h3 class="tools__subtitle">Design surveys</h3>
+                        <p class="tools__text">Sports betting, lottery and bingo playing for the fun</p>
                     </div>
                     <div class="col-3">
-                        <img class="tools__image" src="images/red.svg" alt="preference">
-                        <h3>Preference tests</h3>
-                        <p>The Myspace page defines the individual.</p>
+                        <img class="tools__image" src="images/red.svg" alt="icon">
+                        <h3 class="tools__subtitle">Preference tests</h3>
+                        <p class="tools__text">The Myspace page defines the individual</p>
                     </div>
                     <div class="col-3">
-                        <img class="tools__image" src="images/blue.svg" alt="time">
-                        <h3>Five second tests</h3>
-                        <p>Personal choices and the overall personality of the person. </p>
+                        <img class="tools__image" src="images/blue.svg" alt="icon">
+                        <h3 class="tools__subtitle">Five second tests</h3>
+                        <p class="tools__text"> Personal choices and the overall personality of the person. </p>
                     </div>
                 </div>
-                <div class="start">
-                    <button class="btn-primary btn">
-                            <span>Sign up Now</span>
-                    </button>
+                <div class="tools__action">
+                    <a class="tools__action__link btn-primary btn" href="#">Sign up Now</a>
                 </div>
-
             </div>
         </section>
     </main>
@@ -109,65 +95,58 @@
         <div class="container">
             <div class="row">
                 <div class="col-3">
-                    <div class="footer__logo logo">
-                        <img class="logo__image" src="images/logo_img.svg" alt="logo__image">
-                        <img class="logo__title" src="images/logo_title.svg" alt="logo__title">
-                    </div>
+                   <img class="logo__image" src="images/logo.svg" alt="logo">
                 </div>
                 <div class="col-3">
-                    <div class="footer__menu menu">
-                        <h4 class="menu__title">Quick Links</h4>
-                        <ul class="menu__item item">
-                            <li class="item__link">
-                                <a href="#">About Us</a>
-                            </li>
-                            <li class="item__link">
-                                <a href="#">Blog</a>
-                            </li>
-                            <li class="item__link">
-                                <a href="">Contact</a>
-                            </li>
-                            <li class="item__link">
-                                <a href="">FAQ</a>
-                            </li>
-
-                        </ul>
-                    </div>
+                    <h4 class="footer__title">Quick Links</h4>
+                    <ul class="footer__items">
+                        <li class="footer__item">
+                            <a class="footer__link" href="#">About Us</a>
+                        </li>
+                        <li class="footer__item">
+                            <a class="footer__link" href="#">Blog</a>
+                        </li>
+                        <li class="footer__item">
+                            <a class="footer__link" href="#">Contact</a>
+                        </li>
+                        <li class="footer__item">
+                            <a class="footer__link" href="#">FAQ</a>
+                        </li>
+                    </ul>
                 </div>
                 <div class="col-3">
-                    <div class="footer__menu menu">
-                        <h4 class="menu__title">Legal Stuff</h4>
-                        <ul class="menu__item item">
-                            <li class="item__link">
-                                <a href="#">Disclaimer</a>
-                            </li>
-                            <li class="item__link">
-                                <a href="#">Financing</a>
-                            </li>
-                            <li class="item__link">
-                                <a href="#">Privacy Policy</a>
-                            </li>
-                            <li class="item__link">
-                                <a href="#">Terms of Service</a>
-                            </li>
-
-                        </ul>
-                    </div>
+                    <h4 class="footer__title">Legal Stuff</h4>
+                    <ul class="footer__items">
+                        <li class="footer__item">
+                            <a class="footer__link" href="#">Disclaimer</a>
+                        </li>
+                        <li class="footer__item">
+                            <a class="footer__link" href="#">Financing</a>
+                        </li>
+                        <li class="footer__item">
+                            <a class="footer__link" href="#">Privacy Policy</a>
+                        </li>
+                        <li class="footer__item">
+                            <a class="footer__link" href="#">Terms of Service</a>
+                        </li>
+                    </ul>
                 </div>
                 <div class="col-3">
-                    <div class="footer__form form">
-                        <h4 class="form__title">Knowing you're always on the best energy deal.</h4>
-                        <form class="form__input" action="#">
-                            <input type="tel" placeholder="Enter your phone Number">
-                        </form>
-                        <button class="btn-primary btn">
-                            <span>Sign up Now</span>
-                        </button>
-                    </div>
+                    <h4 class="footer__title">Knowing you're always on the best energy deal.</h4>
+                    <form class="form" action="#">
+                        <input class="form__input" type="text" placeholder="Enter your phone Number">
+                        <div class="form__link-wrapper">
+                            <a class="form__link btn-primary btn" href="#">Sign up Now</a>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
+
     </footer>
+
 </body>
+
+</html>
 
 </html>
